--- a/public_html/css/Amira_personlig_sida.css
+++ b/public_html/css/Amira_personlig_sida.css
@@ -155,17 +155,8 @@ h2:hover {
 /* end skills */
 
 @media (max-width: 991px) {
-body{
-  position:relative;
-  width:50px;
-max-width: 20em;
- 
-}
   .container {
-    padding: 0px;
-    margin: 0px;
-min
- 
+    width: 14em;
   }
   h1 {
     position: relative;
@@ -175,14 +166,14 @@ min
     font-size: 28px;
   }
   .list {
-    position: relative;
+    position: flex;
+    width: 6em;
     bottom: 80px;
-    left: 170px;
-    width: 180px;
+    left: 180px;
     height: auto;
   }
   .list-text {
-    font-size: 18px;
+    font-size: 16px;
     font-weight: bold;
     line-height: 1.6em;
     padding-left: 20px;
@@ -193,7 +184,6 @@ min
     left: 17px;
     width: 38vw;
     height: 30vw;
- 
   }
   .paragraph {
     height: auto;
