--- a/public_html/css/emma.css
+++ b/public_html/css/emma.css
@@ -24,8 +24,13 @@ body{
     color: var(--clr-light)
 }
 
+/*===================================
+-- yttre grid --
+===================================*/
+
 .outer-grid{
     display: grid;
+    background-color: yellow;
     background-image: url(../bilder/profil/code.jpg);
     grid-template-rows: 1fr 0.5fr 0.5fr;
     grid-template-areas:
@@ -33,6 +38,10 @@ body{
         "info"
         "skills";
 }
+
+/*===================================
+-- inre grid profil --
+===================================*/
 
 .emma-profile{
     display:grid;
@@ -54,12 +63,16 @@ body{
 .emma-contact{
     align-self: center;
     font-weight: bold;
-    font-size: 1.8rem;
+    font-size: 1.5rem;
     font-family: var(--ff-main);
     margin-left: 0.5rem;
     list-style: inside;
     padding-right: 1.6rem;
 }
+
+/*===================================
+-- about me --
+===================================*/
 
 .emma-about{
     font-family: var(--ff-main);
@@ -70,9 +83,12 @@ body{
     
 }
 
+/*===================================
+-- skills --
+===================================*/
+
 .emma-skills{
     width: 100%;
-    margin-left: 1rem;
 }
 
 .skill {
@@ -118,6 +134,11 @@ body{
     width: 75%;
     background-color: #e2ee3e;
 }
+
+/*===================================
+-- Breakpoints --
+===================================*/
+
 @media screen and (min-width:768px){
     .outer-grid{
         grid-template-columns: repeat(2, 1fr);
@@ -127,7 +148,7 @@ body{
         "info skills";
     }
     .emma-profile{
-        grid-template-columns:;
+        grid-template-columns: 1fr;
     }
     .emma-img{
         margin-left: 2rem;
@@ -142,7 +163,7 @@ body{
     }
     
     .emma-skills{
-        margin-left: 2rem;
+        
         margin-top: 5rem;
     }
 
