--- a/public_html/css/main.css
+++ b/public_html/css/main.css
@@ -7,6 +7,8 @@
   padding:0;
 }
 
+
+
 .portfolio-sida-a {
   min-height: 80vh;
   padding: 0;
@@ -468,12 +470,20 @@ img.profilBild {
 /* SLUT Kontakta oss */
 
 /*===== NAV =====*/
-nav{
+
+.nav__menu {
+
+  width: 80%;
+  float:left;
+
+}
+nav {
   top: 0;
-  background-color: rgb(129, 71, 4);
+  background-color: rgb(88, 88, 88);
   box-shadow: 0 4px 25px rgba(14,36,49,.15);
   padding-top: 10px;
   padding-bottom: 10px;
+  height: 3em;
 }
 
 nav ul{
@@ -494,12 +504,13 @@ nav a{
 
 }
 
-label.nav__logo{
-  font-size: 35px;
+label.nav__logo {
+ 
   font-weight: bold;
   color: yellow;
   padding: 0 2rem;
-  line-height: 5rem;
+  float:left;
+  /* line-height: 5rem; */
 }
 
 a:hover{
