--- a/public_html/css/main.css
+++ b/public_html/css/main.css
@@ -102,8 +102,8 @@ button {
 }
 
 button.nastaProjekt {
-  background-color: bisque;
-  border:1px solid rgb(37, 16, 16);
+  background-color: rgb(25, 177, 204);
+  border:1px solid rgb(15, 98, 112);
   width: 100%;
   height: 2.5em;
 
