--- a/public_html/css/main.css
+++ b/public_html/css/main.css
@@ -102,10 +102,12 @@ button {
 }
 
 button.nastaProjekt {
-  background-color: rgb(25, 177, 204);
-  border:1px solid rgb(15, 98, 112);
+  background-color: rgb(235, 235, 21);
+  border:1px solid rgb(235, 235, 21);
   width: 100%;
   height: 2.5em;
+  margin-bottom:2em;
+  margin-top:2em;
 
 }
 
