--- a/public_html/css/main.css
+++ b/public_html/css/main.css
@@ -198,7 +198,7 @@ button.nastaProjekt {
     border-width: 8px;
     border-block-start-width: 0px;
     padding-top: 5px;
-    padding-bottom: 0ps;
+    padding-bottom: 0;
     border-radius: 100px;
     background-color: #ccc;
   }
@@ -243,7 +243,7 @@ button.nastaProjekt {
     color: beige;
     transform: translate(-45%, 0%);
     box-sizing: border-box;
-    border-width: 100%;
+    /* border-width: 100%; */
     border-bottom: 1px solid rgb(255, 255, 255, 0.1);
     border-bottom: 1px solid black;
     transition: 0.4s;
@@ -545,7 +545,7 @@ nav .nav__toggle{
   nav .nav__toggle{
     display: block;  
     position: fixed;
-    z-index: var(2000);
+    z-index: 2000;
     top: 0;
     left: .5rem;
     
