--- a/public_html/css/edStyle.css
+++ b/public_html/css/edStyle.css
@@ -174,7 +174,7 @@ nav .nav__toggle{
   nav .nav__toggle{
     display: block;  
     position: fixed;
-    z-index: var(2000);
+    z-index: 2000;
     top: 0;
     left: .5rem;
     
