--- a/public_html/css/main.css
+++ b/public_html/css/main.css
@@ -11,10 +11,9 @@
 
 .portfolio-sida-a {
   min-height: 80vh;
-  padding: 0;
+  padding-bottom: 5em;
   margin: 0;
   background-image: url(../bilder/index-images/01.jpg);
-  background-size: 100% auto;
   position: relative;
   background-repeat: no-repeat;
   z-index: 10;
