--- a/public_html/css/main.css
+++ b/public_html/css/main.css
@@ -10,24 +10,25 @@
 
 
 .portfolio-sida-a {
+  background-color: black;
   min-height: 80vh;
   padding-bottom: 5em;
   margin: 0;
-  background-image: url(../bilder/index-images/01.jpg);
+  /* background-image: url(../bilder/index-images/01.jpg); */
   position: relative;
   background-repeat: no-repeat;
-  z-index: 10;
+  /* z-index: 10; */
 }
 
-.portfolio-sida-a .overlay-a {
-  background-color: rgba(0, 0, 0, 0.671);
+/* .portfolio-sida-a .overlay-a {
+  /* background-color: rgba(0, 0, 0, 0.671);
   position: absolute;
   width: 100%;
   height: 100%;
   left: 0;
   top: 0;
-  z-index: 1;
-}
+  z-index: 1; */
+} */
 
 /* start logo */
 .logo-a {
