--- a/public_html/css/aboutGrp12.css
+++ b/public_html/css/aboutGrp12.css
@@ -100,6 +100,11 @@ body{
     cursor: pointer;
 }
 
+a{
+    color: var(--clr-dark);
+    text-decoration: none;
+}
+
 /*===================================
 -- footer --
 ===================================*/
