--- a/public_html/css/main.css
+++ b/public_html/css/main.css
@@ -14,7 +14,7 @@
   min-height: 80vh;
   padding-bottom: 5em;
   margin: 0;
-  /* background-image: url(../bilder/index-images/01.jpg); */
+  background-image: url(../bilder/index-images/01.jpg);
   position: relative;
   background-repeat: no-repeat;
   /* z-index: 10; */
