--- a/public_html/css/aboutGrp12.css
+++ b/public_html/css/aboutGrp12.css
@@ -134,6 +134,6 @@ a{
 @media screen and (min-width:1440px){
     .wrapper-grid{
         grid-template-columns: repeat(2, 1fr);
-        margin: 0 10% 20px 10%; 
+        margin: 0 10% 1.25em 10%; 
     }
 }
