--- a/public_html/css/aboutGrp12.css
+++ b/public_html/css/aboutGrp12.css
@@ -33,8 +33,8 @@ body{
     background-color: var(--clr-light);
     padding: 2rem 5rem 2rem 5rem;
     margin-bottom: 2rem;
-    border-top: 2px solid var(--clr-dark);
-    border-bottom: 2px solid var(--clr-dark);
+    border-top: 0.125rem solid var(--clr-dark);
+    border-bottom: 0.125rem solid var(--clr-dark);
     text-align: center;
 }
 
@@ -44,7 +44,7 @@ body{
 
 .wrapper-grid{
     display: grid;
-    grid-template-columns: minmax(200px, 1fr);
+    grid-template-columns: minmax(12rem, 1fr);
     justify-content: center;
     grid-gap: 2rem;
     margin: 2rem;
@@ -115,8 +115,8 @@ a{
     padding: 2rem 5rem 2rem 5rem;
     margin-top: 2rem;
     margin-bottom: 2rem;
-    border-top: 2px solid var(--clr-dark);
-    border-bottom: 2px solid var(--clr-dark);
+    border-top: 0.125rem solid var(--clr-dark);
+    border-bottom: 0.125rem solid var(--clr-dark);
     text-align: center;
 
 }
