--- a/public_html/css/main.css
+++ b/public_html/css/main.css
@@ -242,16 +242,16 @@ button.nastaProjekt {
   }
   #btn-a {
     z-index: 1111;
-    width: 25px;
-    right: 130px;
-    font-size: 20px;
+    width: 1.563rem;
+    right: 8.125rem;
+    font-size: 1.25rem;
     color: rgba(245, 245, 220, 0.452);
-    padding: 5px 9px;
+    padding: 0.313rem 0.563rem;
     display: inline-block;
     cursor: pointer;
     background-color: beige;
-    border-radius: 3px;
-    transform: translate(1px, 30px);
+    border-radius: 0.188rem;
+    transform: translate(0.063rem, 1.875rem);
   }
 }
 /* ===== End start sida =====*/
@@ -265,7 +265,7 @@ button.nastaProjekt {
     margin-right: 2rem;
   }
   nav a {
-    font-size: 20px;
+    font-size: 1.25rem;
   }
 }
 
@@ -277,7 +277,7 @@ button.nastaProjekt {
   padding: 0.5rem 1rem;
   outline: none;
   border-radius: 0.5rem;
-  border: 2px solid rgba(0, 0, 0, 0);
+  border: 0.125rem solid rgba(0, 0, 0, 0);
   background-color: rgba(230, 230, 230, 0.6);
   font-size: 1.1rem;
   transition: 0.3s;
@@ -293,7 +293,7 @@ button.nastaProjekt {
 }
 
 .area {
-  min-height: 150px;
+  min-height: 9.375rem;
 }
 
 .contact__form {
@@ -308,8 +308,8 @@ button.nastaProjekt {
 }
 .error {
   color: red;
-  font-size: 13px;
-  margin: 10px 0;
+  font-size: 0.813rem;
+  margin: 0.625rem 0;
   right: 0;
 }
 
@@ -356,7 +356,7 @@ button.nastaProjekt {
     padding-bottom: 3rem;
   }
   .section-title::after {
-    width: 80px;
+    width: 5rem;
     top: 3rem;
   }
 }
@@ -382,14 +382,14 @@ div.subCategory {
     height: auto;
     padding: 0;
     margin: 1em;
-    max-width: 768px;
+    max-width: 48rem;
     float: left;
 
 }
 
 img.profilBild {
     width: 100%;
-    border: 1px solid #000;
+    border: 0.063rem solid #000;
     border-radius: 3em;
 }
 
@@ -406,10 +406,10 @@ img.profilBild {
 .skill p {
     text-align: left;
     color: white;
-    width: 100px;
-    padding-left: 10px;
-    padding-top: 10px;
-    padding-bottom: 10px;
+    width: 6.25rem;
+    padding-left: 0.625rem;
+    padding-top: 0.625rem;
+    padding-bottom: 0.625rem;
     background-color: rgba(0, 0, 0, 0.3);
     border-radius: 0 2em 2em 0 ;
 
@@ -458,9 +458,9 @@ img.profilBild {
 nav {
   top: 0;
   background-color: rgb(0, 0, 0);
-  box-shadow: 0 4px 25px rgba(14,36,49,.15);
-  padding-top: 10px;
-  padding-bottom: 10px;
+  box-shadow: 0 0.25rem 1.563rem rgba(14,36,49,.15);
+  padding-top: 0.625rem;
+  padding-bottom: 0.625rem;
   height: 3em;
 }
 
@@ -498,7 +498,7 @@ a:hover{
 
 nav .nav__toggle{
   color: yellow;
-  font-size: 40px;
+  font-size: 2.5rem;
   cursor: pointer;
   display: none;
   position: absolute;
@@ -515,7 +515,7 @@ nav .nav__toggle{
     margin-right: 2rem;
   }
   nav a{
-    font-size: 20px;
+    font-size: 1.25rem;
   }
   
   nav .nav__toggle{
@@ -529,11 +529,11 @@ nav .nav__toggle{
   nav li{
     display: block;
     color: rgb(78, 13, 13);
-    margin: 50px 0;
-    line-height: 30px;
+    margin: 3.125rem 0;
+    line-height: 1.875rem;
   }
   nav a{
-    font-size: 20px;
+    font-size: 1.25rem;
   }
   a:hover{
     border: none;
