--- a/public_html/css/main.css
+++ b/public_html/css/main.css
@@ -23,11 +23,11 @@
 
 /* start logo */
 .logo-a {
-  margin-top: 30px;
-  padding: 0px;
-  padding-left: 30px;
+  margin-top: 1.875rem;
+  padding: 0;
+  padding-left: 1.875rem;
   font-weight: bold;
-  font-size: 15px;
+  font-size: 0.938rem;
   color: beige;
   float:left;
 }
@@ -36,19 +36,19 @@
 .header-area-a .container-a {
   width: 88%;
   text-align: right;
-  margin-top: 10px;
+  margin-top: 0.625rem;
   position: relative;
   float:left;
   z-index: 1000;
 }
 .header-area-a .links-a {
   list-style: none;
-  padding-left: 50px;
+  padding-left: 3.125rem;
 }
 .header-area-a .links-a li {
   display: inline-block;
   width: fit-content;
-  margin-left: 20px;
+  margin-left: 1.25rem;
 }
 .header-area-a .links-a li a {
   color: beige;
@@ -67,7 +67,7 @@
 .introduction-text {
   color: beige;
   z-index: 2;
-  padding-top: 50px;
+  padding-top: 3.125rem;
   left: 50%;
   text-align: center;
   width: 95%;
@@ -77,20 +77,20 @@
 }
 .introduction-text h1 {
   text-transform: uppercase;
-  font-size: 40px;
-  padding-top: 180px;
+  font-size: 2.5rem;
+  padding-top: 11.25rem;
 }
 .introduction-text p {
-  font-size: 15px;
+  font-size: 0.938rem;
   line-height: 1.6em;
   display: none;
-  padding-top: 30px;
+  padding-top: 1.875rem;
   line-height: 2em;
 }
 
 button.nastaProjekt {
   background-color: rgb(235, 235, 21);
-  border:1px solid rgb(235, 235, 21);
+  border:0.063rem solid rgb(235, 235, 21);
   width: 100%;
   height: 2.5em;
   margin-bottom:2em;
@@ -100,7 +100,7 @@ button.nastaProjekt {
 
 /* Start features */
 .features-a {
-  padding: 25px 0;
+  padding: 1.563rem 0;
   overflow: hidden;
   line-height: 1em;
 }
@@ -112,24 +112,24 @@ button.nastaProjekt {
   text-align: center;
 }
 .features-a .box-a:first-child {
-  margin-left: 120px;
+  margin-left: 7.5rem;
 }
 .features-a .box-a i {
   color: rgb(235, 235, 21);
-  border: 2px solid #ccc;
-  border-width: 12px;
+  border: 0.125rem solid #ccc;
+  border-width: 0.75rem;
   border-radius: 100%;
   background-color: #ccc;
 }
 .features-a .box-a h3 {
   text-transform: uppercase;
-  font-size: 12px;
-  padding: 0px;
-  margin: 5px;
+  font-size: 0.75rem;
+  padding: 0;
+  margin: 0.313rem;
 }
 .features-a .box-a p {
-  font-size: 10px;
-  padding: 0px;
+  font-size: 0.625rem;
+  padding: 0;
   margin: 0;
 }
 .features-a .box-a i:hover {
@@ -144,27 +144,27 @@ button.nastaProjekt {
 @media (max-width: 991px) {
 
   .introduction-text-a p {
-    margin: 20px;
-    font-size: 12px;
+    margin: 1.25rem;
+    font-size: 0.75rem;
     line-height: 1.6;
   }
   .introduction-text-a h1 {
     text-transform: uppercase;
-    font-size: 25px;
-    margin-top: 100px;
-    margin-bottom: 30px;
+    font-size: 1.564rem;
+    margin-top: 6.25rem;
+    margin-bottom: 1.875rem;
   }
   /* start logo */
   .header-area-a .logo-a {
-    font-size: 13px;
+    font-size: 0.813rem;
     width: 100%;
-    margin-top: 50px;
-    padding-left: 20px;
-    border-left-width: 20px;
+    margin-top: 3.125rem;
+    padding-left: 1.25rem;
+    border-left-width: 1.25rem;
   }
   .header-area-a .logo-a span {
     margin: 0;
-    padding-left: 25px;
+    padding-left: 1.563rem;
     z-index: 10;
   }
   /* End logo */
@@ -172,7 +172,7 @@ button.nastaProjekt {
   /* Start features */
   .features-a .box-a {
     width: 22%;
-    height: 80px;
+    height: 5rem;
     float: left;
     padding: 0;
     margin-top: 0;
@@ -181,24 +181,24 @@ button.nastaProjekt {
   }
   .features-a .box-a i {
     color: rgb(235, 235, 21);
-    border: 2px solid #ccc;
-    border-width: 8px;
-    border-block-start-width: 0px;
-    padding-top: 5px;
+    border: 0.125rem solid #ccc;
+    border-width: 0.5rem;
+    border-block-start-width: 0;
+    padding-top: 0.313rem;
     padding-bottom: 0;
-    border-radius: 100px;
+    border-radius: 6.25rem;
     background-color: #ccc;
   }
   .features-a .box-a h3 {
     text-transform: uppercase;
-    font-size: 9px;
+    font-size: 0.563rem;
     font-weight: bold;
-    line-height: 10px;
-    margin: 8px;
+    line-height: 0.625rem;
+    margin: 0.5rem;
   }
   .features-a .box-a p {
-    font-size: 8px;
-    line-height: 0px;
+    font-size: 0.5rem;
+    line-height: 0;
   }
   .features-a .box-a i:hover {
     background-color: rgb(235, 235, 21);
@@ -206,39 +206,39 @@ button.nastaProjekt {
     color: #ccc;
   }
   .features-a .box-a:first-child {
-    margin-left: 20px;
+    margin-left: 1.25rem;
   }
   /* End features */
 
   .header-area-a .links-a {
     position: fixed;
-    top: 65px;
-    right: 0px;
+    top: 4.063rem;
+    right: 0;
     background-color: #262626;
-    width: 130px;
+    width: 8.125rem;
     height: 50%;
     transition: 0.3s;
     transition: all 0.5s ease;
-    border-radius: 10px 0px 0px 15px;
+    border-radius: 0.625rem 0 0 0.938rem;
   }
   .header-area-a .links-a li a {
     display: block;
     height: 100%;
-    line-height: 40px;
+    line-height: 2.5rem;
     text-align: left;
-    font-size: 14px;
+    font-size: 0.875rem;
     color: beige;
     transform: translate(-45%, 0%);
     box-sizing: border-box;
     /* border-width: 100%; */
-    border-bottom: 1px solid rgb(255, 255, 255, 0.1);
-    border-bottom: 1px solid black;
+    border-bottom: 0.063rem solid rgb(255, 255, 255, 0.1);
+    border-bottom: 0.063rem solid black;
     transition: 0.4s;
-    padding-top: 25px;
+    padding-top: 1.563rem;
   }
 
   .links-a li:hover a {
-    padding-left: 50px;
+    padding-left: 3.125rem;
   }
   #btn-a {
     z-index: 1111;
