--- a/public_html/css/emma.css
+++ b/public_html/css/emma.css
@@ -55,7 +55,7 @@ body{
 }
 
 .emma-img{
-    border: 2px solid var(--clr-accent);
+    border: 0.125rem solid var(--clr-accent);
     position: relative;
     padding: 0.5em;
     margin-left: 1em;
