--- a/public_html/css/Amira_personlig_sida.css
+++ b/public_html/css/Amira_personlig_sida.css
@@ -1,6 +1,6 @@
 body {
-  padding: 0px;
-  margin: 0px;
+  padding: 0rem;
+  margin: 0rem;
   position: relative;
   background-size: 100% auto;
   background-image: url(../bilder/index-images/josada001.jpg);
@@ -9,38 +9,38 @@ body {
 .container {
   margin: 0;
   padding: 0;
-  height: 40em;
-  width: 30em;
+  height: 40vw;
+  width: 30vw;
   position: relative;
-  bottom: 25px;
+  bottom: 2rem;
 }
 
 .header {
   position: relative;
   left: 40vw;
-  top: 30px;
+  top: 2rem;
   background: none;
-  padding-top: 0px;
-  margin-top: 0px;
+  padding-top: 0rem;
+  margin-top: 0rem;
 }
 h1 {
   position: relative;
   color: beige;
-  font-size: 35px;
+  font-size: 2.2em;
   color: whitesmoke;
   font-weight: bold;
   font-family: "Caveat", cursive;
 }
 .list {
   position: relative;
-  bottom: 6em;
-  left: 14em;
+  bottom: 10rem;
+  left: 23rem;
   width: 21vw;
   height: 9vw;
   background: none;
-  font-size: 25px;
-  padding: 0px;
-  margin: 0px;
+  font-size: 1.6em;
+  padding: 0rem;
+  margin: 0rem;
   line-height: 1.6em;
   color: whitesmoke;
   font-family: "Caveat", cursive;
@@ -49,15 +49,13 @@ h1 {
 
 .image {
   position: relative;
-  top: 3em;
-  left: 4em;
+  top: 3rem;
+  left: 4rem;
   width: 15vw;
   height: 15vw;
   background-image: url("../bilder/index-images/largg.jpg");
   background-size: cover;
-  border-width: 1px;
-  border-radius: 20px;
-  border-color: black black black black;
+  border-radius: 2rem;
 }
 .paragraph {
   height: 14vw;
@@ -72,8 +70,8 @@ h1 {
   text-align: center;
   color: whitesmoke;
   margin: 0;
-  padding: 0px;
-  font-size: 27px;
+  padding: 0rem;
+  font-size: 1.6em;
   line-height: 1.3em;
   font-family: "Caveat", cursive;
 }
@@ -93,8 +91,7 @@ h1 {
   font-size: 30px;
   text-decoration-line: underline;
   text-align: center;
-  margin-bottom: 30px;
-  padding-top: 30px;
+  margin-bottom: 2rem;
   color: whitesmoke;
   font-family: "Caveat", cursive;
 }
@@ -106,26 +103,23 @@ h2:hover {
 .skills .skill-box {
   background-color: rgba(214, 197, 197, 0.301);
   display: flex;
-  padding: 14px;
-  margin-left: 19px;
-  margin-bottom: 30px;
-  margin-right: 8px;
-  line-height: 20px;
+  padding: 1rem;
+  margin-left: 0.5rem;
+  margin-bottom: 2rem;
+  line-height: 1.3rem;
 }
 .skills .skill-name {
   font-weight: bold;
-  width: 130px;
+  width: 9vw;
   text-align: center;
-  padding-right: 10px;
   color: rgb(20, 19, 19);
 }
 .skills .skill-progress {
-  height: 20px;
+  height: 1.5vw;
   width: 100%;
   background-color: whitesmoke;
-  border-radius: 6px;
+  border-radius: 0.5rem;
   position: relative;
-  padding-left: 20px;
   overflow: hidden;
 }
 .skill-progress span {
@@ -157,39 +151,36 @@ h2:hover {
     background-size: cover;
   }
   .container {
-    width: 30px;
+    height: 100%;
   }
   h1 {
-    position: relative;
-    right: 50px;
+    right: 4rem;
     color: whitesmoke;
-    padding-top: 10px;
-    font-size: 28px;
-    width: 180px;
+    font-size: 1.8em;
+    width: 11rem;
   }
   .list {
-    position: relative;
-    bottom: 80px;
-    left: 180px;
-    width: 150px;
+    bottom: 5rem;
+    left: 11rem;
+    width: 10rem;
     height: auto;
   }
   .list-text {
-    font-size: 18px;
+    font-size: 0.7em;
     font-weight: bold;
     line-height: 1.6em;
-    padding-left: 20px;
+    padding-left: 1.5rem;
   }
   .image {
     position: relative;
     top: 2em;
-    left: 20px;
+    left: 1.6rem;
     width: 38vw;
     height: 30vw;
   }
   .paragraph {
-    height: 150px;
-    width: 20em;
+    height: 35vw;
+    width: 90vw;
     background: none;
     overflow: hidden;
     border: none;
@@ -199,8 +190,7 @@ h2:hover {
   #lorem {
     text-align: center;
     margin: 0;
-    padding: 5px;
-    font-size: 15px;
+    font-size: 1em;
     line-height: 1.5em;
     font-weight: bold;
     color: whitesmoke;
@@ -208,43 +198,42 @@ h2:hover {
   /* start skills */
 
   .skills {
-    width: 340px;
+    width: 90vw;
     height: 80vw;
     position: relative;
-    left: 15px;
-    bottom: 100px;
-    border-radius: 20px;
+    left: 1rem;
+    bottom: 5rem;
+    border-radius: 3rem;
     display: none;
   }
   .skills h2 {
     font-weight: bold;
-    font-size: 23px;
+    font-size: 1.4em;
     text-decoration-line: underline;
     text-align: center;
-    margin-bottom: 20px;
-    padding-top: 10px;
+    margin-bottom: 2rem;
     color: whitesmoke;
     position: relative;
   }
   .skills .skill-box {
     background-color: #eee;
     display: flex;
-    padding: 8px;
-    margin: 0px 8px 20px 10px;
+    padding: 0.5rem;
+    margin: 0rem 0.5rem 1.3rem 1rem;
   }
   .skills .skill-name {
     font-weight: bold;
-    font-size: 12px;
-    width: 40px;
+    font-size: 0.8em;
+    width: 10vw;
     text-align: center;
-    padding-right: 10px;
+    padding-right: 1rem;
     color: black;
   }
   .skills .skill-progress {
-    height: 19px;
+    height: 1.2rem;
     width: 100%;
     background-color: rgba(141, 137, 137, 0.37);
-    border-radius: 6px;
+    border-radius: 0.2rem;
     position: relative;
     overflow: hidden;
   }
