--- a/public_html/css/aboutGrp12.css
+++ b/public_html/css/aboutGrp12.css
@@ -38,6 +38,10 @@ body{
     text-align: center;
 }
 
+#about-our-skills{
+    margin: 0.8rem;
+}
+
 /*===================================
 -- Yttre grid --
 ===================================*/
