--- a/public_html/css/aboutGrp12.css
+++ b/public_html/css/aboutGrp12.css
@@ -31,7 +31,7 @@ body{
 .about-mainext{
     font-family: var(--ff-main);
     background-color: var(--clr-light);
-    padding: 2rem 5rem 2rem 5rem;
+    padding: 2rem 3rem 2rem 3rem;
     margin-bottom: 2rem;
     border-top: 0.125rem solid var(--clr-dark);
     border-bottom: 0.125rem solid var(--clr-dark);
@@ -133,11 +133,17 @@ a{
     .wrapper-grid{
         grid-template-columns: repeat(2, 1fr);
     }
+    .about-mainext{
+        padding: 2rem 10rem 2rem 10rem;
+    }
 }
 
 @media screen and (min-width:1440px){
     .wrapper-grid{
         grid-template-columns: repeat(2, 1fr);
         margin: 0 10% 1.25em 10%; 
+    }
+    .about-mainext{
+        padding: 2rem 25rem 2rem 25rem;
     }
 }
